--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "holo-react",
   "version": "0.1.0",
   "private": true,
+  "homepage":"https://phongsmm.github.io/hololivecardview",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
@@ -20,7 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+	"push":"gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
