--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "holo-react",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://phongsmm.github.io/hololivecardview",
+  "homepage": "https://phongsmm.github.io/hololivecardview",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "immutability-helper": "^3.1.1",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
@@ -22,7 +23,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-	"push":"gh-pages -d build"
+    "push": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
