--- a/package.json
+++ b/package.json
@@ -4,17 +4,20 @@
   "private": true,
   "homepage": "https://phongsmm.github.io/hololivecardview",
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "immutability-helper": "^3.1.1",
     "lodash": "^4.17.20",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-grid-layout": "^1.1.1",
+    "react-player": "^2.9.0",
     "react-rnd": "^10.2.3",
     "react-scripts": "3.4.3",
-    "react-youtube": "^7.12.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.3.0"
   },
