--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
+    "gh-pages": "^3.1.0",
     "immutability-helper": "^3.1.1",
     "lodash": "^4.17.20",
     "prop-types": "^15.7.2",
